# Gat

./: .gitignore  NOTICE  design.txt  main.py  no.txt  pyproject.toml  yes.txt
src/gat/: README.md  main.py
